Changed the structure of the repository into a format (somewhat) fit for a package.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-config_devices.json
+src/config_devices.json
 app.log
 homewizard_venv
+data/solar_prediction.csv
+data/solar_prediction.parquet
+__pycache__/
+.cache.sqlite
+*.pyc
