--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,13 @@ build-backend = "hatchling.build"
 [project]
 name = "control-homewizard-devices"
 version = "0.0.1"
-authors = [
-  { name="Ian van Vliet", email="ian.vvliet@gmail.com" },
-]
+authors = [{ name = "Ian van Vliet", email = "ian.vvliet@gmail.com" }]
 description = "A small python package controlling and scheduling homewizard devices"
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "Operating System :: OS Independent",
 ]
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
@@ -27,3 +25,9 @@ packages = ["src/control_homewizard_devices"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+
+[tool.ruff]
+target-version = "py311"
+
+[project.scripts]
+myservice = "control_homewizard_devices.control_energy_systems:entrypoint"
