Remove no longer used code (Pulp and SCIP). Redo the try and except in control_energy_system.py to allow errors in the main loop to properly cancel the program.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 config/
+data/
 app.log
 homewizard_venv
-data/solar_prediction.csv
-data/solar_prediction.parquet
 __pycache__/
 .cache.sqlite
 *.pyc
