--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,10 @@ jobs:
         run: poetry install --no-interaction --no-root --with dev
 
       - name: Run lint
-        run: poetry run flake8 .
+        run: poetry run ruff check .
+
+      - name: Run format check
+        run: poetry run ruff format --check .
 
       - name: Run tests
         run: poetry run pytest
