--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,4 +29,4 @@ jobs:
         run: poetry run ruff format --check .
 
       - name: Run tests
-        run: poetry run pytest --rootdir=.
+        run: poetry run pytest
