--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Push to deploy branch
         run: |
           git config user.name "CI Bot"
-          git config user.email "46758238+IanVliet@users.noreply.github.com"
+          git config user.email "ci-bot+github@example.com"
           git fetch origin
           git checkout -B deploy
           git push origin deploy --force
