--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: main
+          persist-credentials: true
 
       - name: Push to deploy branch
         run: |
