--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,9 @@ name: Deploy
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write   # needed so GITHUB_TOKEN can push
+
 jobs:
   update-deploy-branch:
     runs-on: ubuntu-latest
@@ -11,7 +14,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: main
-          persist-credentials: true
 
       - name: Push to deploy branch
         run: |
