added user name to deploy-check.service

--- a/example_files/deploy-check.service
+++ b/example_files/deploy-check.service
@@ -3,6 +3,6 @@ Description=Check Git repo for updates and redeploy if needed
 
 [Service]
 Type=oneshot
-ExecStart=/home/[user name]/projects/homewizard_project/update_and_restart.sh
+ExecStart=/home/[user name]/projects/homewizard_project/update_and_restart.sh [user name]
 WorkingDirectory=/home/[user name]/projects/homewizard_project
 User=[user name]
