--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ orjson = "^3.11.2"
 quartz-solar-forecast = "^1.1.18"
 plotly = "^6.3.0"
 huggingface-hub = "0.17.3"
+pillow = "^11.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
