--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,10 @@ quartz-solar-forecast = "^1.1.18"
 plotly = "^6.3.0"
 huggingface-hub = "0.17.3"
 pillow = "^11.3.0"
+spidev = { version = ">=3.7,<4.0", markers = 'sys_platform == "linux" and (platform_machine == "armv7l" or platform_machine == "aarch64")' }
+gpiozero = { version = ">=2.0.1,<3.0.0", markers = 'sys_platform == "linux" and (platform_machine == "armv7l" or platform_machine == "aarch64")' }
+rpi-gpio = { version = ">=0.7.1,<0.8.0", markers = 'sys_platform == "linux" and (platform_machine == "armv7l" or platform_machine == "aarch64")' }
+lgpio = { version = ">=0.2.2.0,<0.3.0.0", markers = 'sys_platform == "linux" and (platform_machine == "armv7l" or platform_machine == "aarch64")' }
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
